Title and icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="nojs">
 	<head>
+		<title>Disliked.Video</title>
 		<link rel="stylesheet" href="css.css" />
 		<script src="js.js" defer></script>
 	</head>
@@ -20,9 +21,5 @@
 
 		<h2 id="privacy">Privacy</h2>
 		<p>Your data is not sent or stored anywhere. Only YouTube knows your secrets.</p>
-
-		<template>
-
-		</template>
 	</body>
 </html>
