Slight styling improvements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Disliked.Video</h1>
 
 		<blockquote>
-			<p>"What videos have I disliked on YouTube?"</p>
+			<p>“What videos have I disliked on YouTube?”</p>
 			<cite>Yourself, probably</cite>
 		</blockquote>
 
